--- a/index.html
+++ b/index.html
@@ -31,17 +31,20 @@
 	<div class="container main">
 
 				<div class="secondary col">
-					<h2 id="events">Events</h2>
-						<p>That is cubby spelled backwards</p>
-						<p>This is a <a href="https://www.bigyouth.fr/en">site</a> I am inspired by to make this template better</p>
+						<div id="cool-stuff">
+							<h2>Events</h2>
+							<p id="cool-text">We host music, art, and community events! Check out the calendar and come say hi</p>
+						</div>
+					<h3 id="events">cool stuff</h3>
+
+
 				</div> <!--secondary-->
 
 				<div class="primary col">
-					<img class="feat-img" src="img/eli_Instagram.svg" alt="Eli Casanio Art Opening">
+					<a href="#"><img class="feat-img" src="img/eli_Instagram.svg" alt="Eli Casanio Art Opening"></a>
 					<h3>The Queen of Texas</h3><br>
 						<h4>Solo Art Exhibition by Eli Casiano</h4>
-						<p>10.13.201</p>
-						<li><a href="https://www.facebook.com/resonatorart/"><i class="fa fa-facebook-square fa-5x" aria-hidden="true"></i></a></li>
+						<!--<li><a href="https://www.facebook.com/resonatorart/"><i class="fa fa-facebook-square fa-5x" aria-hidden="true"></i></a></li>-->
 				</div> <!--end /.primary-->
 
 				<div class="tertiary col">
