--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="container top">
 		<header class="main-header">
-					<h1 class="name"><a href="index.html">Resonator Art Space</a></h1>
+					<!--<h1 class="name"><a href="index.html">Resonator Art Space</a></h1>-->
 					<ul class="main-nav">
 							<!--<li><a href="https://donorbox.org/resonator-art-space">donate</a></li>-->
 							<li><a href="mailto:resonator.ok@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
@@ -25,6 +25,13 @@
 				<h1 class="headline">Resonator Art Space</h1>
 					<span class="headline" id="tagline">art, music, community</span>
 		</div><!--end of banner-->
+
+		<ul class="second-nav">
+				<!--<li><a href="https://donorbox.org/resonator-art-space">donate</a></li>-->
+				<li><a href="mailto:resonator.ok@gmail.com">info</a></li>
+				<li><a href="https://www.facebook.com/resonatorart/">donate</a></li>
+				<li><a href="https://www.instagram.com/resonator_art/">contact</a></li>
+			</ul>
 
 	</div><!--end of header-->
 
@@ -59,6 +66,7 @@
 				</div> <!--end of tertiary-->
 
 	</div><!--end of container main-->
+
 
 		<footer class="main-footer">
 			<span>&copy;2016 Resonator Art Space</span>
