--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <div class="container top">
 		<header class="main-header">
+			<img class="logo" src="img/blue_logo.svg" alt="logo">
 					<!--<h1 class="name"><a href="index.html">Resonator Art Space</a></h1>-->
-					<ul class="main-nav">
-							<!--<li><a href="https://donorbox.org/resonator-art-space">donate</a></li>-->
+					<ul class="header-nav">
 							<li><a href="mailto:resonator.ok@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.facebook.com/resonatorart/"><i class="fa fa-facebook-square fa-5x" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.instagram.com/resonator_art/"><i class="fa fa-instagram fa-5x" aria-hidden="true"></i></a></li>
@@ -21,21 +21,20 @@
 		</header><!--end of header-->
 
 		<div class="banner">
-			<img class="logo" src="img/logo.svg" alt="logo">
-				<h1 class="headline">Resonator Art Space</h1>
+			<ul class="second-nav">
+					<li><a href="info.html">info</a></li>
+					<li><a href="https://donorbox.org/resonator-art-space">donate</a></li>
+					<li><a href="events.html">events</a></li>
+			</ul>
+
+
+			<h1 class="headline">Resonator Art Space</h1>
 					<span class="headline" id="tagline">art, music, community</span>
 		</div><!--end of banner-->
 
-		<ul class="second-nav">
-				<!--<li><a href="https://donorbox.org/resonator-art-space">donate</a></li>-->
-				<li><a href="mailto:resonator.ok@gmail.com">info</a></li>
-				<li><a href="https://www.facebook.com/resonatorart/">donate</a></li>
-				<li><a href="https://www.instagram.com/resonator_art/">contact</a></li>
-			</ul>
+</div><!--end of conatiner top-->
 
-	</div><!--end of header-->
-
-	<div class="container main">
+<div class="container main">
 
 				<div class="secondary col">
 						<div id="cool-stuff">
