--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <div class="container top">
 		<header class="main-header">
-			<img class="logo" src="img/blue_logo.svg" alt="logo">
+			<!--<img class="logo" src="img/blue_logo.svg" alt="logo">-->
+			<h1 class="headline">Resonator Art Space</h1>
 					<!--<h1 class="name"><a href="index.html">Resonator Art Space</a></h1>-->
 					<ul class="header-nav">
 							<li><a href="mailto:resonator.ok@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
@@ -28,8 +29,7 @@
 			</ul>
 
 
-			<h1 class="headline">Resonator Art Space</h1>
-					<span class="headline" id="tagline">art, music, community</span>
+
 		</div><!--end of banner-->
 
 </div><!--end of conatiner top-->
