finished with update for resonator site 2.0

--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 </head>
 <body>
 
-<div class="container top">
+
 		<header class="main-header">
+			<div class="container clearfix">
 			<!--<img class="logo" src="img/blue_logo.svg" alt="logo">-->
-			<h1 class="headline">Resonator Art Space</h1>
-					<!--<h1 class="name"><a href="index.html">Resonator Art Space</a></h1>-->
+					<h1 class="name"><a href="index.html">Resonator Art Space</a></h1>
 					<ul class="header-nav">
 							<li><a href="mailto:resonator.ok@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.facebook.com/resonatorart/"><i class="fa fa-facebook-square fa-5x" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.instagram.com/resonator_art/"><i class="fa fa-instagram fa-5x" aria-hidden="true"></i></a></li>
 						</ul>
+		</div><!--end of conatiner-->
 		</header><!--end of header-->
 
-		<div class="banner">
+	<!--	<div class="banner">
 			<ul class="second-nav">
 					<li><a href="info.html">info</a></li>
 					<li><a href="https://donorbox.org/resonator-art-space">donate</a></li>
@@ -32,28 +33,28 @@
 
 		</div><!--end of banner-->
 
-</div><!--end of conatiner top-->
-
-<div class="container main">
+<div class="container main clearfix">
 
 				<div class="secondary col">
-						<div id="cool-stuff">
-							<h2>Events</h2>
-							<p id="cool-text">We host music, art, and community events! Check out the calendar and come say hi</p>
+						<div id="feature">
+								<h4 class="category">Current Exhibition</h4>
+									<h2>The Queen of Texas</h2>
+									<h3 class="tagline">Solo Exhibiton by Eli Casiano</h3>
+								<figure>
+								<a class="icon-logo" href="https://www.facebook.com/events/1528010960543173/"><i class="fa fa-external-link-square fa-lg" aria-hidden="true"></i></a>
+							</figure>
 						</div>
-					<h3 id="events">cool stuff</h3>
+
+
 
 
 				</div> <!--secondary-->
 
 				<div class="primary col">
-					<a href="#"><img class="feat-img" src="img/eli_Instagram.svg" alt="Eli Casanio Art Opening"></a>
-					<h3>The Queen of Texas</h3><br>
-						<h4>Solo Art Exhibition by Eli Casiano</h4>
-						<!--<li><a href="https://www.facebook.com/resonatorart/"><i class="fa fa-facebook-square fa-5x" aria-hidden="true"></i></a></li>-->
+					<a href="https://www.facebook.com/events/1528010960543173/"><img class="feat-img" src="img/eli_Instagram.svg" alt="Eli Casanio Art Opening"></a>
 				</div> <!--end /.primary-->
 
-				<div class="tertiary col">
+			<!--	<div class="tertiary col">
 						<div class="quad col">
 							<img class="mini-img" src="img/eli_Instagram.svg" alt="Eli Casanio Art Opening">
 								<h3>Solo Exhibition</h3>
@@ -61,8 +62,13 @@
 								<h3>Solo Exhibition</h3>
 							<img class="mini-img" src="img/eli_Instagram.svg" alt="Eli Casanio Art Opening">
 								<h3>Solo Exhibition</h3>
-						</div><!--end of quad col-->
-				</div> <!--end of tertiary-->
+						</div>
+				</div> end of tertiary-->
+
+				<div class="tertiary col contact">
+					<h2>Intrested in working with us?</h2>
+					<h4>contact us at <a href="mailto:resonator.ok@gmail.com">resonator.ok@gmail.com</h4>
+				</div>
 
 	</div><!--end of container main-->
 
