fix donate button

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
 
 		<header class="main-header">
-			<div class="container clearfix">
+			<div class="container top clearfix">
 			<!--<img class="logo" src="img/blue_logo.svg" alt="logo">-->
 					<h1 class="name"><a href="index.html">Resonator Art Space</a></h1>
+
 					<ul class="header-nav">
 							<li><a href="mailto:resonator.ok@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.facebook.com/resonatorart/"><i class="fa fa-facebook-square fa-5x" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.instagram.com/resonator_art/"><i class="fa fa-instagram fa-5x" aria-hidden="true"></i></a></li>
 						</ul>
+
 		</div><!--end of conatiner-->
 		</header><!--end of header-->
 
@@ -35,6 +37,11 @@
 
 <div class="container main clearfix">
 
+	<a class="donate" href="https://donorbox.org/resonator-art-space">
+					<img src="https://web.archive.org/web/20090821222115/http://geocities.com/SunsetStrip/Lounge/7650/dollarspindownd.gif"
+							alt="money">
+							Donate!</a>
+
 				<div class="secondary col">
 						<div id="feature">
 								<h4 class="category">Current Exhibition</h4>
@@ -44,9 +51,6 @@
 								<a class="icon-logo" href="https://www.facebook.com/events/1528010960543173/"><i class="fa fa-external-link-square fa-lg" aria-hidden="true"></i></a>
 							</figure>
 						</div>
-
-
-
 
 				</div> <!--secondary-->
 
@@ -74,7 +78,8 @@
 
 
 		<footer class="main-footer">
-			<span>&copy;2016 Resonator Art Space</span>
+
+			<span>&copy; 2016 Resonator Art Space</span>
 		</footer>
 
 </body>
