--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<header class="main-header">
 			<div class="container top clearfix">
 			<!--<img class="logo" src="img/blue_logo.svg" alt="logo">-->
-					<h1 class="name"><a href="index.html">Resonator Art Space</a></h1>
+					<h1 class="name">Resonator Art Space</h1>
 
 					<ul class="header-nav">
 							<li><a href="mailto:resonator.ok@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
@@ -79,7 +79,7 @@
 
 		<footer class="main-footer">
 
-			<span>&copy; 2016 Resonator Art Space</span>
+			<span>&copy; 2017 Resonator Art Space</span>
 		</footer>
 
 </body>
