fixing pseduo elements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Resonator Art Space</title>
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
 </head>
 <body>
 
@@ -70,8 +70,8 @@
 				</div> end of tertiary-->
 
 				<div class="tertiary col contact">
-					<h2>Intrested in working with us?</h2>
-					<h4>contact us at <a href="mailto:resonator.ok@gmail.com">resonator.ok@gmail.com</h4>
+					<h2 class="contact">Intrested in working with us?</h2>
+					<h4>Holla <a href="mailto:resonator.ok@gmail.com">resonator.ok@gmail.com</h4>
 				</div>
 
 	</div><!--end of container main-->
