--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</div> end of tertiary-->
 
 				<div class="tertiary col contact">
-					<h2 class="contact">Intrested in working with us?</h2>
+					<h2 class="contact">Interested in working with us?</h2>
 					<h4>Holla <a href="mailto:resonator.ok@gmail.com">resonator.ok@gmail.com</h4>
 				</div>
 
