changing homepage content

--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
 				<div class="secondary col">
 						<div id="feature">
 								<h4 class="category">Current Exhibition</h4>
-									<h2>The Queen of Texas</h2>
-									<h3 class="tagline">Solo Exhibiton by Eli Casiano</h3>
+									<h2>Coalescence</h2>
+									<h3 class="tagline">Group Exhibition by Coalescence Collective</h3>
 								<figure>
-								<a class="icon-logo" href="https://www.facebook.com/events/1528010960543173/"><i class="fa fa-external-link-square fa-lg" aria-hidden="true"></i></a>
+								<a class="icon-logo" href="http://bit.ly/coalescence-art"><i class="fa fa-external-link-square fa-lg" aria-hidden="true"></i></a>
 							</figure>
 						</div>
 
 				</div> <!--secondary-->
 
 				<div class="primary col">
-					<a href="https://www.facebook.com/events/1528010960543173/"><img class="feat-img" src="img/eli_Instagram.svg" alt="Eli Casanio Art Opening"></a>
+					<a href="http://bit.ly/coalescence-art"><img class="feat-img" src="img/coal.svg" alt="Coalescence Collective Exhibiton"></a>
 				</div> <!--end /.primary-->
 
 			<!--	<div class="tertiary col">
