change to mobile first site and add sub events

--- a/index.html
+++ b/index.html
@@ -3,23 +3,34 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Resonator Art Space</title>
-	<link rel="stylesheet" href="normalize.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
 </head>
 <body>
 
 
 		<header class="main-header">
-			<div class="container top clearfix">
-			<!--<img class="logo" src="img/blue_logo.svg" alt="logo">-->
-					<h1 class="name">Resonator Art Space</h1>
+			<div class="container top">
+				<nav class="navigation">
+					<a class="donate" href="https://donorbox.org/resonator-art-space">
+									<img src="https://web.archive.org/web/20090821222115/http://geocities.com/SunsetStrip/Lounge/7650/dollarspindownd.gif"
+											alt="money">
+											Donate!</a>
 
 					<ul class="header-nav">
-							<li><a href="mailto:resonator.ok@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-							<li><a href="https://www.facebook.com/resonatorart/"><i class="fa fa-facebook-square fa-5x" aria-hidden="true"></i></a></li>
-							<li><a href="https://www.instagram.com/resonator_art/"><i class="fa fa-instagram fa-5x" aria-hidden="true"></i></a></li>
-						</ul>
+						<li><a href="mailto:resonator.ok@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/resonatorart/"><i class="fa fa-facebook-square fa-5x" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.instagram.com/resonator_art/"><i class="fa fa-instagram fa-5x" aria-hidden="true"></i></a></li>
+					</ul>
+				</nav>
+
+
+			<img class="logo" src="img/blue_logo.svg" alt="logo">
+
+					<h1 class="name">Resonator Art Space</h1>
+
+
 
 		</div><!--end of conatiner-->
 		</header><!--end of header-->
@@ -37,10 +48,7 @@
 
 <div class="container main clearfix">
 
-	<a class="donate" href="https://donorbox.org/resonator-art-space">
-					<img src="https://web.archive.org/web/20090821222115/http://geocities.com/SunsetStrip/Lounge/7650/dollarspindownd.gif"
-							alt="money">
-							Donate!</a>
+
 
 				<div class="secondary col">
 						<div id="feature">
@@ -76,11 +84,17 @@
 
 	</div><!--end of container main-->
 
+	<ul class="nav-bottom">
+		<li><a href="info.html">Info</a></li>
+		<li><a href="asd.html">Events</a></li>
+		<li><a hef="#workshops">Workshops</a></li>
+	</ul>
 
-		<footer class="main-footer">
+
+	<!--	<footer class="main-footer">
 
 			<span>&copy; 2017 Resonator Art Space</span>
-		</footer>
+		</footer> -->
 
 </body>
 </html>
